--- a/app/src/main/res/drawable/ic_add.xml
+++ b/app/src/main/res/drawable/ic_add.xml
@@ -1,10 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
-    <path
-        android:fillColor="@android:color/white"
-        android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+    android:width="448dp"
+    android:height="512dp"
+    android:viewportWidth="448"
+    android:viewportHeight="512">
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M432,256c0,17.69 -14.33,32.01 -32,32.01H256v144c0,17.69 -14.33,31.99 -32,31.99s-32,-14.3 -32,-31.99v-144H48c-17.67,0 -32,-14.32 -32,-32.01s14.33,-31.99 32,-31.99H192v-144c0,-17.69 14.33,-32.01 32,-32.01s32,14.32 32,32.01v144h144C417.7,224 432,238.3 432,256z"/>
 </vector>
